# tear_sheet_generator

./: .gitignore  BACKLOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt
data/raw/: Stock_Report_Sheet_Generator_original.py  Tear_Sheet_Class_original.xlsx
docs/: AI_PROJECT_GUIDE.md  ARCHITECTURE.md  CHANGELOG.md  DECISIONS.md  PROJECT_LOG.md
notebooks/: tear_sheet.ipynb
outputs/: AAPL_tear_sheet.xlsx  CAT_tear_sheet.xlsx
scripts/: main.py
src/tear_sheet/: __init__.py  charts.py  config.py  excel_builder.py  financials.py  scraper.py  utils.py
tests/: test_charts.py  test_excel_builder.py  test_financials.py  test_utils.py
