[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "tear-sheet-generator"
version = "0.1.0"
description = "Scrapes financial data and generates print-ready Excel tear sheets"
requires-python = ">=3.11"
authors = [
    {name = "Landon Memmott", email = "landon.memmott@pm.me"},
]

dependencies = [
    "yfinance>=0.2",
    "openpyxl>=3.1",
    "pandas>=2.0",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
]
notebook = [
    "jupyter>=1.0",
    "ipykernel>=6.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
